--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top" style="background: rgba(0,0,0, 0.5); !important;">
+	<nav class="navbar navbar-inverse navbar-fixed-top" style="background: rgba(0,0,0,1); !important;">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header" style="width: 200px;">
