--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<div class="content-box-2-inner">
 			<div class="text-contents">
 				<h3 class="c-header" style="color: white;font-weight: 600;">Why <span style="color: red;">Choose</span> Us</h3>
-				<p class="c-text" style="color: white; font-weight: 600;">
+				<p class="c-text" style="color: white; font-weight: 600; line-height: 30px;">
 					Maxtrade strives to be worthy of our client's trust by providing them with services which are economically beneficial to them and to create awareness regarding reliable and highly profitable investment platform among our clients around the globe. All you need to do is sit back and enjoy how your profit grows on a daily.
 				</p>
 				<ul class="c-link" style="color: white;">
