--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 
 	<!-- Main Css -->
+	<link rel="stylesheet" type="text/css" href="css/default-style.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 
 	<!-- Fontawesome -->
@@ -73,7 +75,7 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 	<!-- Hero -->
-	<div class="hero-content-box">
+	<div class="hero-content-box bg-parallax">
 		<div class="hero-content-inner">
 			<div class="text-content">
 				<h3>Trade with confidence on the world's leading social trading platform</h3>
@@ -110,7 +112,7 @@
 	</div>
 
 	<!-- Section 2 -->
-	<div class="content-box-2">
+	<div class="content-box-2 bg-parallax">
 		<div class="content-box-2-inner">
 			<div class="text-contents">
 				<h3 class="c-header" style="color: white;font-weight: 600;">Why <span style="color: red;">Choose</span> Us</h3>
@@ -133,9 +135,70 @@
 		</div>
 	</div>
 
+	<!-- Section 3 -->
+	<div class="container">
+		<div class="row">
+			<div class="content-box-3">
+				<div class="content-box-3-inner">
+					<div class="content-header text-center">
+						<h3>The global leader of Trading</h3>
+						<p>Discover why millions of users from over 140 countries choose to trade with Maxtrade</p>
+					</div>
+					<div class="col-md-4">
+	                    <div class="md-raised border-radius-4 bg-white">
+	                        <div class="padding-50px-all">
+	                            <div class="text-center inner-match-height">
+	                                <div class="display-inline-block margin-20px-bottom">                  
+	                                     <img src="img/1568994114.png" alt="" style="max-width:40%; height:auto;" />
+	                                 </div>
+	                                 <h3 class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-400">Trust</h3>
+	                                <p class="alt-font text-extra-dark-gray margin-10px-bottom text-small">Our company is fully regulated by the FCA and CySec</p>
+	                            </div>
+	                        </div>
+	                    </div>
+	                </div>
+					<div class="col-md-4">
+	                    <div class="md-raised border-radius-4 bg-white">
+	                        <div class="padding-50px-all">
+	                            <div class="text-center inner-match-height">
+	                                <div class="display-inline-block margin-20px-bottom">                  
+	                                     <img src="img/1568994177.png" alt="" style="max-width:40%; height:auto;" />
+	                                 </div>
+	                                 <h3 class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-400">Security</h3>
+	                                <p class="alt-font text-extra-dark-gray margin-10px-bottom text-small">Your funds are protected by industry leading security protocols</p>
+	                            </div>
+	                        </div>
+	                    </div>
+	                </div>
+	                <div class="col-md-4">
+	                    <div class="md-raised border-radius-4 bg-white">
+	                        <div class="padding-50px-all">
+	                            <div class="text-center inner-match-height">
+	                                <div class="display-inline-block margin-20px-bottom">                  
+	                                     <img src="img/1568994286.png" alt="" style="max-width:40%; height:auto;" />
+	                                 </div>
+	                                 <h3 class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-400">Privacy</h3>
+	                                <p class="alt-font text-extra-dark-gray margin-10px-bottom text-small">We will never share your private data without your permission</p>
+	                            </div>
+	                        </div>
+	                    </div>
+	                </div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Section 4-->
+	<div class="content-box-4">
+		<div class="container-fluid">
+			
+		</div>
+	</div>
 
 
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap3/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
