sign-in and sign-up button rectified

--- a/index.html
+++ b/index.html
@@ -192,7 +192,13 @@
 	<!-- Section 4-->
 	<div class="content-box-4">
 		<div class="container-fluid">
-			
+			<div class="col-md-12">
+				<div class="Carousel owl-carousel">
+					<div class="">
+
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
