Another commit made

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top" style="background: rgba(0,0,0,1); !important;">
+	<nav id="navbar" class="navbar navbar-inverse navbar-fixed-top nav-down" style="background: transparent !important; border-bottom: none;">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header" style="width: 200px;">
@@ -206,6 +206,7 @@
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap3/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/auto-hiding-bootstrap-navbar.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
